feat:會員取得會員資料 API (/v1/user/getuserinfo)、調整 API path
